# Django_BookStore_Website

./: README.md  pyproject.toml
Bookstore/: .coverage
Bookstore/Bookstore/: settings.py  urls.py
Bookstore/authapi/: admin.py  forms.py  models.py  urls.py  views.py
Bookstore/authapi/migrations/: 0001_initial.py
Bookstore/authapi/tests/: test_account_forms.py  test_account_models.py
Bookstore/basket/: basket.py  views.py
Bookstore/basket/tests/: test_views.py
Bookstore/cart/: models.py  urls.py  views.py
Bookstore/cart/migrations/: 0001_initial.py
Bookstore/checkout/: models.py  paypal.py  urls.py  views.py
Bookstore/checkout/migrations/: 0001_initial.py
Bookstore/static/js/: index.js
Bookstore/store/: admin.py  context_processors.py  models.py  urls.py  views.py
Bookstore/store/migrations/: 0001_initial.py
Bookstore/store/test/: test_models.py  test_views.py
Bookstore/templates/: base.html
Bookstore/templates/account/: login.html  sub_base.html
Bookstore/templates/account/dashboard/: addresses.html  dashboard.html  edit_addresses.html  edit_details.html  user_orders.html  user_wish_list.html
Bookstore/templates/account/password_reset/: password_reset_confirm.html  password_reset_form.html  reset_status.html
Bookstore/templates/basket/: summary.html
Bookstore/templates/checkout/: delivery_address.html  delivery_choices.html  payment_selection.html  payment_successful.html
Bookstore/templates/store/: base.html  category.html  index.html  single.html
Bookstore/templates/store/basket/: summary.html
Bookstore/tests/: factories.py
(+2 files in other folders)
